# perceptron

./: .gitignore  GPU.sln  README.md
Data/: iris_test.csv  iris_train.csv  mnist_test1.csv  mnist_test2.csv  mnist_test3.csv
Docs/report/: Report.docx  performance.bat  performance.txt
Docs/website/: index.html
GPU/: CMakeLists.txt  CSV.cpp  CSV.h  DOXYGEN.config  Default.h  GPU.vcxproj  GPU.vcxproj.filters  Perceptron.cpp  Perceptron.h  debug.h  default.h  kernel.cu  kernels.cu  kernels.cuh  main.cpp
